FIND_PACKAGE(MPI)

FIND_PATH(LIBLAS_INCLUDE_PATH liblas.h)

FIND_PATH(GDAL_INCLUDE_PATH gdal.h)

FIND_LIBRARY(LIBLAS_LIBRARY NAMES liblas) 

FIND_LIBRARY(GDAL_LIBRARY NAMES gdal)

ADD_EXECUTABLE(reclass_lidar reclass_lidar.cxx)

TARGET_LINK_LIBRARIES(reclass_lidar ${MPI_LIBRARY} ${LIBLAS_LIBRARY} ${GDAL_LIBRARY})
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH} ${LIBLAS_INCLUDE_PATH} ${GDAL_INCLUDE_PATH})